# NeroOps

./: .env.example  .gitignore  CONTRACTS.md  Dockerfile  HEALTH_ANALYTICS_TEST_PLAN.md  Makefile  README.md  TODO.md  alembic.ini  compose.yaml  health_analytics_implementation_plan.md  pyproject.toml  start-neroops.command  stop-neroops.command  test_concerns.md
backend/neroops/: __init__.py  api.py  config.py  database.py  main.py  models.py  schemas.py
backend/neroops/services/: README.md  health_analytics.py  reports.py  storage.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: offline-sync.spec.ts
frontend/public/: fallback.html  manifest.webmanifest  sw.js
frontend/src/: App.tsx  api.ts  db.ts  entryConfig.test.ts  entryConfig.ts  main.tsx  styles.css  types.ts  utils.ts
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: backup.py  install_launch_agents.py  run-dev.sh
tests/: conftest.py  test_api.py  test_health_analytics.py  test_reports.py  test_schemas.py
